removed itemTypeAttributeGroupMappings from metadata and added documentation for metadata
