# njs-backend/src/controllers/meta-data/meta-data.al.ts
@@ -3,12 +3,12 @@ import { AttributeType } from '../../models/meta-data/attribute-type.model';
 import { ConnectionType } from '../../models/meta-data/connection-type.model';
 import { ConnectionRule } from '../../models/meta-data/connection-rule.model';
 import { ItemType } from '../../models/meta-data/item-type.model';
-import { ItemTypeAttributeGroupMapping } from '../../models/meta-data/item-type-attribute-group-mapping.model';
+// import { ItemTypeAttributeGroupMapping } from '../../models/meta-data/item-type-attribute-group-mapping.model';
 import { attributeGroupModelFindAll } from './attribute-group.al';
 import { attributeTypeModelFindAll } from './attribute-type.al';
 import { connectionTypeModelFind, connectionTypeModelFindAll } from './connection-type.al';
 import { connectionRuleModelFind, connectionRuleModelFindAll } from './connection-rule.al';
-import { itemTypeModelFindAll, itemTypeModelFindSingle, itemTypeModelGetAllMappings } from './item-type.al';
+import { itemTypeModelFindAll, itemTypeModelFindSingle/*, itemTypeModelGetAllMappings*/ } from './item-type.al';
 import { notFoundError } from '../error.controller';
 
 export async function modelGetMetaData() {
@@ -17,16 +17,16 @@ export async function modelGetMetaData() {
     let connectionTypes: ConnectionType[];
     let connectionRules: ConnectionRule[];
     let itemTypes: ItemType[];
-    let itemTypeAttributeGroupMappings: ItemTypeAttributeGroupMapping[];
-    [attributeGroups, attributeTypes, connectionTypes, connectionRules, itemTypes, itemTypeAttributeGroupMappings] = await Promise.all([
+    // let itemTypeAttributeGroupMappings: ItemTypeAttributeGroupMapping[];
+    [attributeGroups, attributeTypes, connectionTypes, connectionRules, itemTypes/*, itemTypeAttributeGroupMappings*/] = await Promise.all([
         attributeGroupModelFindAll(),
         attributeTypeModelFindAll(),
         connectionTypeModelFindAll(),
         connectionRuleModelFindAll(),
         itemTypeModelFindAll(),
-        itemTypeModelGetAllMappings(),
+        /*itemTypeModelGetAllMappings()*/,
     ]);
-    return { attributeGroups, attributeTypes, connectionTypes, connectionRules, itemTypes, itemTypeAttributeGroupMappings };
+    return { attributeGroups, attributeTypes, connectionTypes, connectionRules, itemTypes/*, itemTypeAttributeGroupMappings*/ };
 }
 
 export async function modelGetAllowedDownwardConnectionTypesByItemType(itemTypeId: string) {
